fixed scrollbar bug

--- a/frontend/src/Wishlist.css
+++ b/frontend/src/Wishlist.css
@@ -9,34 +9,18 @@
 	border-radius: .25rem;
 }
 .wl-data {
-	/* position: absolute;
-	overflow: auto;
-	height: 88%;
-	width: 75%; */
-	/* top: 18%;
-	left: 14%;
-	z-index: 1; */
 	color: #837457;
 }
-/* .wl-bot {
-	position: relative;
-	width: 25vw;
-	height: 9vw;
-	top: 70%;
-	left: 7%;
-	border-radius: 50%;
-	background: #FFFAE4;
-} */
-.wl-data::-webkit-scrollbar-track {
-  border-radius: 10px;
-  background-color: #D4CFB4;
+.wl::-webkit-scrollbar-track {
+	border-radius: .25rem;
+  	background-color: #D4CFB4;
 }
-.wl-data::-webkit-scrollbar {
-  width: 8px;
+.wl::-webkit-scrollbar {
+  	width: 15px;
 }
-.wl-data::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: #B7AC85;
+.wl::-webkit-scrollbar-thumb {
+  	border-radius: 10px;
+  	background-color: #B7AC85;
 }
 .wl-header {
 	text-align: center;
